--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ title: Home
   from machine learning, causality and uncertainty estimation. My research is particularly motivated by the application of such systems 
   in healthcare in order to improve patient care.
 
-  I am currently doing a research visit at the MPI of Biochemistry hosted by [Prof. Dr. Karsten Borgwardt](https://www.biochem.mpg.de/8147701/CV).
+  I am currently doing a research visit at the MPI of Biochemistry hosted by <a href="https://www.biochem.mpg.de/8147701/CV" target="_blank">Prof. Dr. Karsten Borgwardt</a>.
 
   </p>
 </div>
 
-<!-- <!-- ========== NEWS ========== -->
+<!-- <!-- ========== NEWS ========== 
 <div class="docs-section" id="news">
   <h4>News</h4>
 
