--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ title: Home
               <a class="button" href="{{ paper.data }}" target="_blank">Data</a>
             {% endif %}
 
+            {% if paper.abstract %}
+              <a class="button" target="_blank">Data</a>
+              <button class="button" onclick="toggleCodeText()">Abstract</button>
+              <p id="code-text" style="display: none;">{{ paper.abstract }}</p>
+            {% endif %}
+
           </div>
         </div>
       {% endfor %}
@@ -230,3 +236,14 @@ title: Home
   This website is based on a template by <a href="https://github.com/msaveski/www_personal" target="_blank">Martin Saveski</a>. 
   <br/>
 </div>  
+
+<script>
+function toggleCodeText() {
+  var codeText = document.getElementById('code-text');
+  if (codeText.style.display === 'none') {
+    codeText.style.display = 'block';
+  } else {
+    codeText.style.display = 'none';
+  }
+}
+</script>
