--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ title: Home
 
 <script>
 function toggleCodeText() {
-  var codeText = document.getElementById('code-text');
+  var codeText = document.getElementById('abstract-text');
   if (codeText.style.display === 'none') {
     codeText.style.display = 'block';
   } else {
