--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@ title: Home
 <script>
 function toggleCodeText() {
   var codeText = document.getElementById('abstract-text');
-  if (codeText.style.display === 'none') {
-    codeText.style.display = 'block';
+  if (abstractText.style.display === 'none') {
+    abstractText.style.display = 'block';
   } else {
-    codeText.style.display = 'none';
+    abstractText.style.display = 'none';
   }
 }
 </script>
