--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ title: Home
           <p><i>{{ paper.venue }}</i></p>
            <div class="paper-buttons">
             {% if paper.abstract %}
-              <a class="button" target="_blank">Data</a>
-              <button class="button" onclick="toggleCodeText()">Abstract</button>
+              <a class="button" onclick="toggleCodeText()">Abstract</a>
               <p id="abstract-text" class="abstract-text">{{ paper.abstract }}</p>
             {% endif %}
              
@@ -99,8 +98,7 @@ title: Home
           <p><i>{{ paper.venue }}</i></p>
            <div class="paper-buttons">
             {% if paper.abstract %}
-              <a class="button" target="_blank">Data</a>
-              <button class="button" onclick="toggleCodeText()">Abstract</button>
+              <a class="button" onclick="toggleCodeText()">Abstract</a>
               <p id="abstract-text" class="abstract-text">{{ paper.abstract }}</p>
             {% endif %}
              
