--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ title: Home
            <div class="paper-buttons">
             {% if paper.abstract %}
               <a class="button" onclick="toggleCodeText()">Abstract</a>
-              <p id="abstract-text" class="abstract-text">{{ paper.abstract }}</p>
+<!--               <p id="abstract-text" class="abstract-text">{{ paper.abstract }}</p> -->
             {% endif %}
              
             {% if paper.paper_pdf %}
