--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Home
            <div class="paper-buttons">
             {% if paper.abstract %}
               <a class="button" onclick="toggleCodeText('abstract-text-selected-{{ forloop.index }}')">Abstract</a>
-              <p id="abstract-text-selected-{{ forloop.index }}" class="abstract-text">{{ paper.abstract }}</p>
+              <p id="abstract-text-selected-{{ forloop.index }}" class="abstract-text" style="display: none;">{{ paper.abstract }}</p>
             {% endif %}
              
             {% if paper.paper_pdf %}
@@ -99,7 +99,7 @@ title: Home
            <div class="paper-buttons">
             {% if paper.abstract %}
               <a class="button" onclick="toggleCodeText('abstract-text-all-{{ forloop.index }}')">Abstract</a>
-              <p id="abstract-text-all-{{ forloop.index }}" class="abstract-text">{{ paper.abstract }}</p>
+              <p id="abstract-text-all-{{ forloop.index }}" class="abstract-text" style="display: none;">{{ paper.abstract }}</p>
             {% endif %}
              
             {% if paper.paper_pdf %}
