--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ title: Home
 
 <script>
 function toggleCodeText(id) {
-  var codeText = document.getElementById(id);
+  var abstractText = document.getElementById(id);
   if (abstractText.style.display === 'none') {
     abstractText.style.display = 'block';
   } else {
