--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ title: Home
 <div class="docs-section" id="resume">
   <h4>Resume</h4>
 
-  <p>Full Resume in <a href={{ "/assets/cv/Nina_CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <!-- <p>Full Resume in <a href={{ "/assets/cv/Nina_CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
   <!-- The Timeline -->
   <ul class="timeline">
