Update description in index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  Hi! I am Nina, a 4th-year PhD student at the <a href="https://www.mpi-sws.org/" target="_blank">Max Planck Institute for Software Systems</a>
-  where I am advised by <a href="https://people.mpi-sws.org/~manuelgr/index.html" target="_blank">Dr. Manuel Gomez Rodriguez</a>
-  and at <a href="https://bsse.ethz.ch/" target="_blank">ETH Zurich</a> where I am co-advised by 
-  <a href="https://bsse.ethz.ch/cbg/group/people/person-detail.MTQ5NDE3.TGlzdC81MTYsOTQ0ODM3Mzc2.html" target="_blank">Prof. Dr. Niko Beerenwinkel</a>
-  under the <a href="https://ellis.eu/projects/human-centric-machine-learning-in-healthcare" target="_blank">ELLIS PhD Program</a>. 
+  Hi! I am Nina. I am a Postdoc at the MPI of Biochemistry working with <a href="https://www.biochem.mpg.de/8147701/CV" target="_blank">Prof. Dr. Karsten Borgwardt</a>.
   My research interests lie in the <b>design of collaborative decision-support systems to improve human-decision making</b>, leveraging tools
   from machine learning, causality and uncertainty estimation. My research is particularly motivated by the application of such systems 
   in healthcare in order to improve patient care.
+  </p>
+  <p>
+  I did my PhD in computer science at the <a href="https://www.mpi-sws.org/" target="_blank">Max Planck Institute for Software Systems</a>
+  under the <a href="https://ellis.eu/projects/human-centric-machine-learning-in-healthcare" target="_blank">ELLIS PhD Program</a>
+  where I was advised by <a href="https://people.mpi-sws.org/~manuelgr/index.html" target="_blank">Dr. Manuel Gomez Rodriguez</a>
+  and co-advised by 
+  <a href="https://bsse.ethz.ch/cbg/group/people/person-detail.MTQ5NDE3.TGlzdC81MTYsOTQ0ODM3Mzc2.html" target="_blank">Prof. Dr. Niko Beerenwinkel</a> at <a href="https://bsse.ethz.ch/" target="_blank">ETH Zurich</a>. 
   </p>
   
 <!--   <p>
