--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 ---
 layout: default
 title: Home
@@ -260,3 +262,4 @@ function toggleCodeText(id) {
   }
 }
 </script>
+</html>
