--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<head></head>
+<body>
 ---
 layout: default
 title: Home
@@ -260,3 +263,5 @@ function toggleCodeText(id) {
   }
 }
 </script>
+</body>
+</html>
