--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@ title: Home
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
   <h4>Resume</h4>
-
+  <!-- update -->
   <p>Full Resume in <a href={{ "/assets/cv/Nina_CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
-
+  
   <!-- The Timeline -->
   <ul class="timeline">
     {% for exp in site.data.experience.experiences %}
